Feat: Creacion de details-content-image  * Contiene codigo css para la seccion de informacion de la vista

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -1,56 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="index, follow">
-  
-    <link rel="icon" href="../assets/icons/page-icon.svg" type="img/svg">
-  
-    <meta name="description" content="Wonder Store - Tienda en linea hecha por fans para fans. ¡Deja que te sorprenda!">
-  
-    <meta property="og:title" content="Wonder Store - Tienda en linea hecha por fans para fans. ¡Deja que te sorprenda!">
-  
-    <meta property="og:image" content="../assets/icons/page-icon.svg">
-  
-    <meta property="og:image:alt" content="Icono de la tienda">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="index, follow" />
+
+    <link rel="icon" href="../assets/icons/page-icon.svg" type="img/svg" />
+
+    <meta
+      name="description"
+      content="Wonder Store - Tienda en linea hecha por fans para fans. ¡Deja que te sorprenda!"
+    />
+
+    <meta
+      property="og:title"
+      content="Wonder Store - Tienda en linea hecha por fans para fans. ¡Deja que te sorprenda!"
+    />
+
+    <meta property="og:image" content="../assets/icons/page-icon.svg" />
+
+    <meta property="og:image:alt" content="Icono de la tienda" />
     <title>WonderStore - Product details</title>
-    <link rel="stylesheet" href="details-content-image.css">
-</head>
-<body>
+    <link rel="stylesheet" href="details-content-image.css" />
+    <link rel="stylesheet" href="details-content-info.css" />
+  </head>
+  <body>
     <main>
-        <div class="main-content-image">
-            <section class="main-content-image-section">
-                
-                <div class="main-content-image-section-images">
-                    <img class="main-content-image-section-image" src="" alt="Imagen">
-                    <img class="main-content-image-section-image" src="" alt="Imagen">
-                    <img class="main-content-image-section-image" src="" alt="Imagen">
-                    <img class="main-content-image-section-image" src="" alt="Imagen">
-                    <img class="main-content-image-section-image" src="" alt="Imagen">
-                    
-                </div>
-                <div class="main-content-image-section-column">
-
-                    <img class="main-content-image-section-image" src="" alt="Imagen principal">
-                    <div class="main-content-image-section-shopping">
-                        <h4>A la gente le gusta esto?</h4>
-                        <p>x personas han comprado este producto</p>
-                    </div>
-                </div>
-            </section>
+      <section class="main-content-image">
+        <div class="main-content-image-section">
+          <article class="main-content-image-section-images">
+            <img class="main-content-image-section-image" src="" alt="Imagen" />
+            <img class="main-content-image-section-image" src="" alt="Imagen" />
+            <img class="main-content-image-section-image" src="" alt="Imagen" />
+            <img class="main-content-image-section-image" src="" alt="Imagen" />
+            <img class="main-content-image-section-image" src="" alt="Imagen" />
+          </article>
+          <article class="main-content-image-section-column">
+            <img
+              class="main-content-image-section-image"
+              src=""
+              alt="Imagen principal"
+            />
+            <div class="main-content-image-section-shopping">
+              <h4>A la gente le gusta esto?</h4>
+              <p>x personas han comprado este producto</p>
+            </div>
+          </article>
         </div>
-        <div class="main-content-info">
-            <section class="main-content-info-section">
-                <h4>Hola...</h4>
-            </section>
+      </section>
+      <section class="main-content-info">
+        <div class="main-content-info-section">
+          <article class="main-content-info-section-infoproduct body-card-text">
+            <h3>Nombre del producto</h3>
+            <div class="main-content-info-section-product-info">
+              <p>Estado: <span>zi</span></p>
+              <p>Calificacion: <span>★★★★★</span></p>
+            </div>
+            <h3 class="product-price">$ 10000.0</h3>
+          </article>
+          <article class="main-content-info-section-buttons">
+            <button
+              class="main-content-info-section-button bg-primary-button"
+              type="button"
+            >
+              Comprar ahora!
+            </button>
+            <button
+              class="main-content-info-section-button bg-secondary-button"
+              type="button"
+            >
+              Agregar al carrito
+            </button>
+            <div class="main-content-info-section-buttons-actions">
+              <button class="main-content-info-section-button" type="button">
+                +
+              </button>
+              <input class="main-content-info-section-input" type="text" />
+              <button class="main-content-info-section-button" type="button">
+                -
+              </button>
+            </div>
+          </article>
+          <article class="main-content-info-section-description body-card-text">
+            <h3>Descripción</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum
+              aut iste quidem aliquam mollitia saepe, consequuntur eos
+              accusantium debitis? Veniam aspernatur voluptate vero rerum rem
+              necessitatibus ipsam ut ad esse.
+            </p>
+          </article>
         </div>
-        <div class="main-content-comments">
-            <section class="main-content-comments-section">
-                <h4>Hola...</h4>
-            </section>
-        </div>
+      </section>
+      <div class="main-content-comments">
+        <section class="main-content-comments-section">
+          <h4>Hola...</h4>
+        </section>
+      </div>
     </main>
-
-</body>
+  </body>
 </html>
