--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -51,24 +51,104 @@
         </div>
       </section>
 
-      <section class="fav-products-section">
-        <div class="container">
-          <article class="fav-products-article">
-            <h1 class="fav-products-title">
-              LOS FAVORITOS DE NUESTROS CLIENTES
-            </h1>
-            <p class="fav-products-caption">
-              Descubre los productos mejor valorados en nuestra tienda
-            </p>
-          </article>
+      <section class="fav-products-section container">
+        <article class="fav-products-article appear-favs-content">
+          <h1 class="fav-products-title">LOS FAVORITOS DE NUESTROS CLIENTES</h1>
+          <h3 class="fav-products-caption">
+            Descubre los productos mejor valorados en nuestra tienda. Aquí
+            encontrarás una selección de artículos que han sido altamente
+            recomendados por nuestros clientes.
+          </h3>
+        </article>
 
-          <div id="fav-products-swiper">
-            <!-- RENDERIZAR SWIPER AQUÍ -->
-          </div>
+        <div id="fav-products-swiper" class="appear-favs-content">
+          <!-- RENDERIZAR SWIPER AQUÍ -->
         </div>
+      </section>
+
+      <section class="newsletter-section container">
+        <article class="newsletter-article">
+          <h1 class="newsletter-title">¡Suscríbete a nuestro newsletter!</h1>
+          <h3 class="newsletter-caption">
+            Entérate al instante de las últimas noticias, ofertas y descuentos
+            exclusivos.
+          </h3>
+        </article>
+
+        <form
+          class="newsletter-form"
+          autocomplete="off"
+          onsubmit="submitNewsletterForm(event)"
+        >
+          <div class="form-group name">
+            <label for="name">Nombre</label>
+            <input type="text" id="name" name="name" required />
+          </div>
+          <div class="form-group surname">
+            <label for="surname">Apellido</label>
+            <input type="text" id="surname" name="surname" required />
+          </div>
+          <div class="form-group email">
+            <label for="email">Correo</label>
+            <input type="email" id="email" name="email" required />
+          </div>
+          <button
+            type="submit"
+            class="general-btn"
+            onclick="submitNewsletterForm(event)"
+          >
+            Suscribirse
+          </button>
+        </form>
       </section>
     </main>
 
+    <dialog id="addCartModal">
+      <header>
+        <h1>Agregar al carrito</h1>
+        <button title="Cerrar modal" id="close-modal">X</button>
+      </header>
+      <section class="product-section">
+        <div class="product-img-container on-load-img-fn general-skeleton">
+          <img
+            id="modal-product-img"
+            class="product-img"
+            src="https://m.media-amazon.com/images/I/61vFg+YuXPL._AC_SX679_.jpg"
+            alt="Imagen del producto a añadir"
+          />
+        </div>
+        <div class="product-details">
+          <h4 class="product-title">Nombre del producto</h4>
+          <div class="product-quantity-section">
+            <p>Cantidad:</p>
+            <div class="quantity-section">
+              <button
+                title="Restar"
+                class="quantity-btn"
+                id="substract-quantity"
+              >
+                -
+              </button>
+              <input type="number" id="product-quantity" value="1" min="1" />
+              <button title="Agregar" class="quantity-btn" id="sum-quantity">
+                +
+              </button>
+            </div>
+            <footer class="confirm-add-product">
+              <p id="modal-product-price">$150</p>
+              <input type="text" id="id-modal-input" />
+              <button class="general-btn" id="add-to-cart-button">
+                Agregar al carrito
+              </button>
+            </footer>
+          </div>
+        </div>
+      </section>
+    </dialog>
+    <div class="overlay"></div>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="../utils/product-modal-functions.js"></script> 
     <script type="module" src="./index.js"></script>
   </body>
 </html>
