--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -23,25 +23,26 @@
     <title>WonderStore - Product details</title>
     <link rel="stylesheet" href="details-content-image.css" />
     <link rel="stylesheet" href="details-content-info.css" />
+    <link rel="stylesheet" href="details-content-comments.css" />
   </head>
   <body>
     <main>
       <section class="main-content-image">
-        <div class="main-content-image-section">
-          <article class="main-content-image-section-images">
-            <img class="main-content-image-section-image" src="" alt="Imagen" />
-            <img class="main-content-image-section-image" src="" alt="Imagen" />
-            <img class="main-content-image-section-image" src="" alt="Imagen" />
-            <img class="main-content-image-section-image" src="" alt="Imagen" />
-            <img class="main-content-image-section-image" src="" alt="Imagen" />
+        <div class="image-section">
+          <article class="section-images">
+            <img class="section-image" src="" alt="Imagen" />
+            <img class="section-image" src="" alt="Imagen" />
+            <img class="section-image" src="" alt="Imagen" />
+            <img class="section-image" src="" alt="Imagen" />
+            <img class="section-image" src="" alt="Imagen" />
           </article>
-          <article class="main-content-image-section-column">
+          <article class="section-column">
             <img
-              class="main-content-image-section-image"
+              class="section-image"
               src=""
               alt="Imagen principal"
             />
-            <div class="main-content-image-section-shopping">
+            <div class="section-shopping">
               <h4>A la gente le gusta esto?</h4>
               <p>x personas han comprado este producto</p>
             </div>
@@ -49,39 +50,39 @@
         </div>
       </section>
       <section class="main-content-info">
-        <div class="main-content-info-section">
-          <article class="main-content-info-section-infoproduct body-card-text">
+        <div class="info-section">
+          <article class="infoproduct body-card-text">
             <h3>Nombre del producto</h3>
-            <div class="main-content-info-section-product-info">
+            <div class="section-product-info">
               <p>Estado: <span>zi</span></p>
               <p>Calificacion: <span>★★★★★</span></p>
             </div>
             <h3 class="product-price">$ 10000.0</h3>
           </article>
-          <article class="main-content-info-section-buttons">
+          <article class="section-buttons">
             <button
-              class="main-content-info-section-button bg-primary-button"
+              class="section-button bg-primary-button"
               type="button"
             >
               Comprar ahora!
             </button>
             <button
-              class="main-content-info-section-button bg-secondary-button"
+              class="section-button bg-secondary-button"
               type="button"
             >
               Agregar al carrito
             </button>
-            <div class="main-content-info-section-buttons-actions">
-              <button class="main-content-info-section-button" type="button">
+            <div class="buttons-actions">
+              <button class="section-button" type="button">
                 +
               </button>
-              <input class="main-content-info-section-input" type="text" />
-              <button class="main-content-info-section-button" type="button">
+              <input class="section-input" type="text" />
+              <button class="section-button" type="button">
                 -
               </button>
             </div>
           </article>
-          <article class="main-content-info-section-description body-card-text">
+          <article class="section-description body-card-text">
             <h3>Descripción</h3>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum
@@ -92,11 +93,110 @@
           </article>
         </div>
       </section>
-      <div class="main-content-comments">
-        <section class="main-content-comments-section">
-          <h4>Hola...</h4>
-        </section>
-      </div>
+      <section class="main-content-comments">
+        <article class="section-califications">
+          <h2>Opiniones de clientes</h2>
+          <p>Calificacion: <span>★★★★★</span></p>
+          <p><span>10000</span> Calificaciones globales</p>
+          <div class="califications-div">
+            <div class="rating-bar">
+              <span class="rating-label">Estrellas</span>
+              <div class="progress-container">
+                <div class="progress-bar"></div>
+              </div>
+              <span class="rating-percentage">10%</span>
+            </div>
+            <div class="rating-bar">
+              <span class="rating-label">Estrellas</span>
+              <div class="progress-container">
+                <div class="progress-bar"></div>
+              </div>
+              <span class="rating-percentage">10%</span>
+            </div>
+            <div class="rating-bar">
+              <span class="rating-label">Estrellas</span>
+              <div class="progress-container">
+                <div class="progress-bar"></div>
+              </div>
+              <span class="rating-percentage">10%</span>
+            </div>
+            <div class="rating-bar">
+              <span class="rating-label">Estrellas</span>
+              <div class="progress-container">
+                <div class="progress-bar"></div>
+              </div>
+              <span class="rating-percentage">10%</span>
+            </div>
+            <div class="rating-bar">
+              <span class="rating-label">Estrellas</span>
+              <div class="progress-container">
+                <div class="progress-bar"></div>
+              </div>
+              <span class="rating-percentage">10%</span>
+            </div>
+            
+          </div>
+        </article>
+        <article class="section-newComment">
+            <h2>Comentarios</h2>
+            <form class="comments-form">
+              <div class="form-input">
+                <div class="form-group form-group-inputs">
+                  <input type="text" placeholder="Nombre..." class="form-input">
+                  <input type="text" placeholder="Anade un comentario..." class="form-input">
+                </div>
+              <div class="form-group form-califications">
+                <label for="rating">Calificación:</label>
+                <div class="rating">
+                  <span class="star" data-value="1">★</span>
+                  <span class="star" data-value="2">★</span>
+                  <span class="star" data-value="3">★</span>
+                  <span class="star" data-value="4">★</span>
+                  <span class="star" data-value="5">★</span>
+                </div>
+              </div>
+            </div>
+              <div class="form-actions">
+                <button type="button" class="btn btn-cancel">Cancelar</button>
+                <button type="submit" class="btn btn-save">Guardar</button>
+              </div>
+            </form>
+        </article>
+        <article class="sections-publicComents">
+          <div class="postedComments">
+            <div class="aComment">
+              <div class="comment-info">
+                <span class="userComment">User</span>
+                <p><span>★★★★★</span></p>
+              </div>
+              <div class="comment-body">
+                <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+                <p>01/01/2024</p>
+              </div>
+            </div>
+            <div class="aComment">
+              <div class="comment-info">
+                <span class="userComment">User</span>
+                <p><span>★★★★★</span></p>
+              </div>
+              <div class="comment-body">
+                <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+                <p>01/01/2024</p>
+              </div>
+            </div>
+            <div class="aComment">
+              <div class="comment-info">
+                <span class="userComment">User</span>
+                <p><span>★★★★★</span></p>
+              </div>
+              <div class="comment-body">
+                <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+                <p>01/01/2024</p>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
