fix:Bug de Ronald.

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -21,6 +21,7 @@
 
     <meta property="og:image:alt" content="Icono de la tienda" />
     <title>WonderStore - Product details</title>
+    <script type="module" src="../general.js"></script>
     <link rel="stylesheet" href="details-content-image.css" />
     <link rel="stylesheet" href="details-content-info.css" />
     <link rel="stylesheet" href="details-content-comments.css" />
@@ -76,7 +77,7 @@
               <button class="section-button" type="button">
                 +
               </button>
-              <input class="section-input" type="text" />
+              <input class="section-input" type="number" value="1" min="1"/>
               <button class="section-button" type="button">
                 -
               </button>
@@ -163,36 +164,34 @@
             </form>
         </article>
         <article class="sections-publicComents">
-          <div class="postedComments">
-            <div class="aComment">
-              <div class="comment-info">
-                <span class="userComment">User</span>
-                <p><span>★★★★★</span></p>
-              </div>
-              <div class="comment-body">
-                <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
-                <p>01/01/2024</p>
-              </div>
+          <div class="aComment">
+            <div class="comment-info">
+              <span class="userComment">User</span>
+              <p><span>★★★★★</span></p>
             </div>
-            <div class="aComment">
-              <div class="comment-info">
-                <span class="userComment">User</span>
-                <p><span>★★★★★</span></p>
-              </div>
-              <div class="comment-body">
-                <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
-                <p>01/01/2024</p>
-              </div>
+            <div class="comment-body">
+              <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+              <p>01/01/2024</p>
             </div>
-            <div class="aComment">
-              <div class="comment-info">
-                <span class="userComment">User</span>
-                <p><span>★★★★★</span></p>
-              </div>
-              <div class="comment-body">
-                <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
-                <p>01/01/2024</p>
-              </div>
+          </div>
+          <div class="aComment">
+            <div class="comment-info">
+              <span class="userComment">User</span>
+              <p><span>★★★★★</span></p>
+            </div>
+            <div class="comment-body">
+              <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+              <p>01/01/2024</p>
+            </div>
+          </div>
+          <div class="aComment">
+            <div class="comment-info">
+              <span class="userComment">User</span>
+              <p><span>★★★★★</span></p>
+            </div>
+            <div class="comment-body">
+              <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+              <p>01/01/2024</p>
             </div>
           </div>
         </article>
