--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -30,7 +30,7 @@
     <main>
       <section class="main-content-image">
         <div class="image-section">
-          <article class="section-images">
+          <article id="image-section-container" class="section-images">
             <img class="section-image" src="" alt="Imagen" />
             <img class="section-image" src="" alt="Imagen" />
             <img class="section-image" src="" alt="Imagen" />
@@ -39,13 +39,14 @@
           </article>
           <article class="section-column">
             <img
+              id="principal-image"
               class="section-image"
               src=""
               alt="Imagen principal"
             />
             <div class="section-shopping">
               <h4>A la gente le gusta esto?</h4>
-              <p>x personas han comprado este producto</p>
+              <p><span id="quantitySell"></span> personas han comprado este producto</p>
             </div>
           </article>
         </div>
@@ -61,26 +62,16 @@
             <h3 class="product-price">$ 10000.0</h3>
           </article>
           <article class="section-buttons">
-            <button
-              class="section-button bg-primary-button"
-              type="button"
-            >
+            <button class="section-button bg-primary-button" type="button">
               Comprar ahora!
             </button>
-            <button
-              class="section-button bg-secondary-button"
-              type="button"
-            >
+            <button class="section-button bg-secondary-button" type="button">
               Agregar al carrito
             </button>
             <div class="buttons-actions">
-              <button class="section-button" type="button">
-                +
-              </button>
-              <input class="section-input" type="number" value="1" min="1"/>
-              <button class="section-button" type="button">
-                -
-              </button>
+              <button class="section-button" type="button">+</button>
+              <input class="section-input" type="number" value="1" min="1" />
+              <button class="section-button" type="button">-</button>
             </div>
           </article>
           <article class="section-description body-card-text">
@@ -135,17 +126,20 @@
               </div>
               <span class="rating-percentage">10%</span>
             </div>
-            
           </div>
         </article>
         <article class="section-newComment">
-            <h2>Comentarios</h2>
-            <form class="comments-form">
-              <div class="form-input">
-                <div class="form-group form-group-inputs">
-                  <input type="text" placeholder="Nombre..." class="form-input">
-                  <input type="text" placeholder="Anade un comentario..." class="form-input">
-                </div>
+          <h2>Comentarios</h2>
+          <form class="comments-form">
+            <div class="form-input">
+              <div class="form-group form-group-inputs">
+                <input type="text" placeholder="Nombre..." class="form-input" />
+                <input
+                  type="text"
+                  placeholder="Anade un comentario..."
+                  class="form-input"
+                />
+              </div>
               <div class="form-group form-califications">
                 <label for="rating">Calificación:</label>
                 <div class="rating">
@@ -157,11 +151,11 @@
                 </div>
               </div>
             </div>
-              <div class="form-actions">
-                <button type="button" class="btn btn-cancel">Cancelar</button>
-                <button type="submit" class="btn btn-save">Guardar</button>
-              </div>
-            </form>
+            <div class="form-actions">
+              <button type="button" class="btn btn-cancel">Cancelar</button>
+              <button type="submit" class="btn btn-save">Guardar</button>
+            </div>
+          </form>
         </article>
         <article class="sections-publicComents">
           <div class="aComment">
@@ -170,7 +164,12 @@
               <p><span>★★★★★</span></p>
             </div>
             <div class="comment-body">
-              <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+              <p>
+                Comments Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo
+                harum quod illo, qui vero repellat praesentium. Eius nisi totam
+                magni, dicta vero ipsa!
+              </p>
               <p>01/01/2024</p>
             </div>
           </div>
@@ -180,7 +179,12 @@
               <p><span>★★★★★</span></p>
             </div>
             <div class="comment-body">
-              <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+              <p>
+                Comments Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo
+                harum quod illo, qui vero repellat praesentium. Eius nisi totam
+                magni, dicta vero ipsa!
+              </p>
               <p>01/01/2024</p>
             </div>
           </div>
@@ -190,12 +194,18 @@
               <p><span>★★★★★</span></p>
             </div>
             <div class="comment-body">
-              <p>Comments Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo harum quod illo, qui vero repellat praesentium. Eius nisi totam magni, dicta vero ipsa!</p>
+              <p>
+                Comments Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit. Ea temporibus omnis quibusdam amet quasi, minus, explicabo
+                harum quod illo, qui vero repellat praesentium. Eius nisi totam
+                magni, dicta vero ipsa!
+              </p>
               <p>01/01/2024</p>
             </div>
           </div>
         </article>
       </section>
     </main>
+    <script type="module" src="details.js"></script>
   </body>
 </html>
