Feat: Obteniendo titulo producto

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -54,7 +54,7 @@
       <section class="main-content-info">
         <div class="info-section">
           <article class="infoproduct body-card-text">
-            <h3>Nombre del producto</h3>
+            <h3 id="product_Name">Nombre del producto</h3>
             <div class="section-product-info">
               <p>Estado: <span>zi</span></p>
               <p>Calificacion: <span>★★★★★</span></p>
