--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -57,7 +57,7 @@
             <h3 id="product_Name">Nombre del producto</h3>
             <div class="section-product-info">
               <p>Estado: <span>Activo</span></p>
-              <p id="rate_Product"></p>
+              <p class="rate_Product"></p>
             </div>
             <h3 id="producto_Price" class="product-price">$ 10000.0</h3>
           </article>
@@ -88,8 +88,8 @@
       <section class="main-content-comments">
         <article class="section-califications">
           <h2>Opiniones de clientes</h2>
-          <p>Calificacion: <span>★★★★★</span></p>
-          <p><span>10000</span> Calificaciones globales</p>
+          <p class="rate_Product">Calificacion</p>
+          <p id="overall_ratings"><span>10000</span> Calificaciones globales</p>
           <div class="califications-div">
             <div class="rating-bar">
               <span class="rating-label">Estrellas</span>
@@ -191,7 +191,7 @@
           <div class="aComment">
             <div class="comment-info">
               <span class="userComment">User</span>
-              <p><span>★★★★★</span></p>
+              <p ><span>★★★★★</span></p>
             </div>
             <div class="comment-body">
               <p>
