Feat: Creacion de metodo para mostrar comentarios

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -92,35 +92,35 @@
           <p id="overall_ratings"><span>10000</span> Calificaciones globales</p>
           <div class="califications-div">
             <div class="rating-bar">
-              <span class="rating-label">Estrellas</span>
+              <span class="rating-label">5 Estrellas</span>
               <div class="progress-container">
                 <div class="progress-bar"></div>
               </div>
               <span class="rating-percentage">10%</span>
             </div>
             <div class="rating-bar">
-              <span class="rating-label">Estrellas</span>
+              <span class="rating-label">4 Estrellas</span>
               <div class="progress-container">
                 <div class="progress-bar"></div>
               </div>
               <span class="rating-percentage">10%</span>
             </div>
             <div class="rating-bar">
-              <span class="rating-label">Estrellas</span>
+              <span class="rating-label">3 Estrellas</span>
               <div class="progress-container">
                 <div class="progress-bar"></div>
               </div>
               <span class="rating-percentage">10%</span>
             </div>
             <div class="rating-bar">
-              <span class="rating-label">Estrellas</span>
+              <span class="rating-label">2 Estrellas</span>
               <div class="progress-container">
                 <div class="progress-bar"></div>
               </div>
               <span class="rating-percentage">10%</span>
             </div>
             <div class="rating-bar">
-              <span class="rating-label">Estrellas</span>
+              <span class="rating-label">1 Estrella</span>
               <div class="progress-container">
                 <div class="progress-bar"></div>
               </div>
@@ -157,7 +157,7 @@
             </div>
           </form>
         </article>
-        <article class="sections-publicComents">
+        <article id="public_Comments" class="sections-publicComents">
           <div class="aComment">
             <div class="comment-info">
               <span class="userComment">User</span>
