--- a/src/pages/error/404/error.html
+++ b/src/pages/error/404/error.html
@@ -15,7 +15,7 @@
             <h2 class="subtitulo">Error</h2>
             <p>Ups...  Pagina web no disponible, Intentelo de nuevo</p>   
             </div>
-             <img src="image .png" class="astronauta">
+             <img src="astronauta.png" class="astronauta">
         
         </div>
       
