--- a/src/pages/error/404/error.html
+++ b/src/pages/error/404/error.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>pagina de error</title>
-        <link rel="stylesheet" href="error.css">
+        <link rel="stylesheet" href="../404css/error.css">
     
     </head>
     <body>
