Feat: Creacion de funcion para nuevo comentario

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -130,32 +130,28 @@
         </article>
         <article class="section-newComment">
           <h2>Comentarios</h2>
-          <form class="comments-form">
+          <form class="comments-form" id="commentsForm">
             <div class="form-input">
-              <div class="form-group form-group-inputs">
-                <input type="text" placeholder="Nombre..." class="form-input" />
-                <input
-                  type="text"
-                  placeholder="Anade un comentario..."
-                  class="form-input"
-                />
-              </div>
-              <div class="form-group form-califications">
-                <label for="rating">Calificación:</label>
-                <div class="rating">
-                  <span class="star" data-value="1">★</span>
-                  <span class="star" data-value="2">★</span>
-                  <span class="star" data-value="3">★</span>
-                  <span class="star" data-value="4">★</span>
-                  <span class="star" data-value="5">★</span>
+                <div class="form-group form-group-inputs">
+                    <input type="text" placeholder="Nombre..." class="form-input" id="userName" />
+                    <input type="text" placeholder="Añade un comentario..." class="form-input" id="userComment" />
                 </div>
-              </div>
+                <div class="form-group form-califications">
+                    <label for="rating">Calificación:</label>
+                    <div class="rating">
+                        <span class="star" data-value="1">★</span>
+                        <span class="star" data-value="2">★</span>
+                        <span class="star" data-value="3">★</span>
+                        <span class="star" data-value="4">★</span>
+                        <span class="star" data-value="5">★</span>
+                    </div>
+                </div>
             </div>
             <div class="form-actions">
-              <button type="button" class="btn btn-cancel">Cancelar</button>
-              <button type="submit" class="btn btn-save">Guardar</button>
+                <button type="button" class="btn btn-cancel">Cancelar</button>
+                <button type="submit" class="btn btn-save">Guardar</button>
             </div>
-          </form>
+        </form>
         </article>
         <article id="public_Comments" class="sections-publicComents">
           <div class="aComment">
