Feat: Agregando eventos a botones comprar y agregar a carrito

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -62,10 +62,10 @@
             <h3 id="producto_Price" class="product-price">$ 10000.0</h3>
           </article>
           <article class="section-buttons">
-            <button class="section-button bg-primary-button" type="button">
+            <button id="ComprarAhora" class="section-button bg-primary-button" type="button">
               Comprar ahora!
             </button>
-            <button class="section-button bg-secondary-button" type="button">
+            <button id="AddCar" class="section-button bg-secondary-button" type="button">
               Agregar al carrito
             </button>
             <div class="buttons-actions">
