fix:Validación al carrito, mensaje en Solicitud y redireccionamiento desde el carrito feat: Un borde en el eliminar más refactor:Cambio de funcion para vaciar al carrito para usar la de la API ya que la que se implementaba mataba la API

--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -133,8 +133,8 @@
           <form class="comments-form" id="commentsForm">
             <div class="form-input">
                 <div class="form-group form-group-inputs">
-                    <input type="text" placeholder="Nombre..." class="form-input" id="userName" />
-                    <input type="text" placeholder="Añade un comentario..." class="form-input" id="userComment" />
+                    <input type="text" placeholder="Nombre..." class="form-input" id="userName" required/>
+                    <input type="text" placeholder="Añade un comentario..." class="form-input" id="userComment" required/>
                 </div>
                 <div class="form-group form-califications">
                     <label for="rating">Calificación:</label>
