--- a/src/pages/details/details.html
+++ b/src/pages/details/details.html
@@ -202,6 +202,7 @@
         </article>
       </section>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="details.js"></script>
   </body>
 </html>
