fix:Ya muestra la alerta en el newsLetter

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -78,7 +78,6 @@
         <form
           class="newsletter-form"
           autocomplete="off"
-          onsubmit="submitNewsletterForm(event)"
         >
           <div class="form-group name">
             <label for="name">Nombre</label>
@@ -93,7 +92,7 @@
             <input type="email" id="email" name="email" required />
           </div>
           <button
-            type="submit"
+            type="button"
             class="general-btn"
             onclick="submitNewsletterForm(event)"
           >
