fix:Bug con livereload en production y Bug de Oscar y Validacion de tarjeta

--- a/src/pages/confirmacion/confirmacion.html
+++ b/src/pages/confirmacion/confirmacion.html
@@ -71,7 +71,7 @@
                 <h1 class="info-form">Pago</h1>
                 <div class="input-container-layout">
                     <div class="input-container full-g-row">
-                        <input class="input-confirmacion-gr" type="number" required>
+                        <input maxlength="19" minlength="15" class="input-confirmacion-gr" type="number" required>
                         <label>Numero de tarjeta</label>
                     </div>
                     <div class="input-container">
@@ -97,7 +97,7 @@
                         <label>Año</label>
                     </div>
                     <div class="input-container">
-                        <input maxlength="4" class="input-confirmacion-gr" type="number" required>
+                        <input maxlength="4" minlength="3" class="input-confirmacion-gr" type="number" required>
                         <label>CVC</label>
                     </div>
                 </div>
