feat: Agregando perfil de Grecia y Oscar

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -65,14 +65,14 @@
       </article>
       <article class="member-card">
         <div class="member-img-container on-load-img-fn">
-          <img class="member-img" src="../../assets/imgs/jesus-profile.jpg" alt="Melanie foto" height="200px" width="100%">
+          <img class="member-img" src="../../assets/imgs/jesus-profile.jpg" alt="Jesús foto" height="200px" width="100%">
         </div>
         <div class="member-info-container">
           <h3>Jesús Gerardo Esquivel Ramírez</h3>
           <h4>CG100223</h4>
           <div class="member-info apodo">
             <span>Apodo:</span>
-            <p>Ronald aquí haces tu magia</p>
+            <p>Woody</p>
           </div>
           <div class="member-info">
             <span>Frase celebre:</span>
@@ -82,7 +82,7 @@
       </article>
       <article class="member-card">
         <div class="member-img-container on-load-img-fn">
-          <img class="member-img" src="../../assets/imgs/ronald-profile.jpg" alt="Melanie foto" height="200px" width="100%">
+          <img class="member-img" src="../../assets/imgs/ronald-profile.jpg" alt="Ronald foto" height="200px" width="100%">
         </div>
         <div class="member-info-container">
           <h3>Ronald Eduardo Mejia Reinosa</h3>
@@ -94,6 +94,40 @@
           <div class="member-info">
             <span>Frase celebre:</span>
             <p>Ya me tenes harto</p>
+          </div>
+        </div>
+      </article>
+      <article class="member-card">
+        <div class="member-img-container on-load-img-fn">
+          <img class="member-img" src="../../assets/imgs/grecia-profile.jpg" alt="Grecia foto" height="200px" width="100%">
+        </div>
+        <div class="member-info-container">
+          <h3>Grecia Michelle Cornejo Raymundo </h3>
+          <h4>CR100723 </h4>
+          <div class="member-info apodo">
+            <span>Apodo:</span>
+            <p>Ronald aquí haces tu magia</p>
+          </div>
+          <div class="member-info">
+            <span>Frase celebre:</span>
+            <p>Estoy en clases</p>
+          </div>
+        </div>
+      </article>
+      <article class="member-card">
+        <div class="member-img-container on-load-img-fn">
+          <img class="member-img" src="../../assets/imgs/ocar-profile.jpg" alt="Oscar foto" height="200px" width="100%">
+        </div>
+        <div class="member-info-container">
+          <h3>Oscar Alejandro Orellana Moran</h3>
+          <h4>OM100123</h4>
+          <div class="member-info apodo">
+            <span>Apodo:</span>
+            <p>Morty/Oso gruñonsito</p>
+          </div>
+          <div class="member-info">
+            <span>Frase celebre:</span>
+            <p>Hay Ronald</p>
           </div>
         </div>
       </article>
