--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -51,14 +51,14 @@
           <img class="member-img" src="../../assets/imgs/melanie-profile.jpg" alt="Melanie foto" height="200px" width="100%">
         </div>
         <div class="member-info-container">
-          <h3>Melanie Adrian Cruz Garcia</h3>
+          <h3>Melanie Adriana Cruz García</h3>
           <h4>CG100223</h4>
           <div class="member-info apodo">
             <span>Apodo:</span>
-            <p>Ronald aquí haces tu magia</p>
+            <p>Mel</p>
           </div>
           <div class="member-info">
-            <span>Frase celebre:</span>
+            <span>Frase célebre:</span>
             <p>Ya subí los cambios</p>
           </div>
         </div>
@@ -75,8 +75,8 @@
             <p>Woody</p>
           </div>
           <div class="member-info">
-            <span>Frase celebre:</span>
-            <p>¿Como vas?</p>
+            <span>Frase célebre:</span>
+            <p>¿Cómo vas?</p>
           </div>
         </div>
       </article>
@@ -85,14 +85,14 @@
           <img class="member-img" src="../../assets/imgs/ronald-profile.jpg" alt="Ronald foto" height="200px" width="100%">
         </div>
         <div class="member-info-container">
-          <h3>Ronald Eduardo Mejia Reinosa</h3>
+          <h3>Ronald Eduardo Mejía Reinosa</h3>
           <h4>MR100823</h4>
           <div class="member-info apodo">
             <span>Apodo:</span>
             <p>Oso de chocolate</p>
           </div>
           <div class="member-info">
-            <span>Frase celebre:</span>
+            <span>Frase célebre:</span>
             <p>Ya me tenes harto</p>
           </div>
         </div>
@@ -102,14 +102,14 @@
           <img class="member-img" src="../../assets/imgs/grecia-profile.jpg" alt="Grecia foto" height="200px" width="100%">
         </div>
         <div class="member-info-container">
-          <h3>Grecia Michelle Cornejo Raymundo </h3>
+          <h3>Grecia Michelle Cornejo Raymundo</h3>
           <h4>CR100723 </h4>
           <div class="member-info apodo">
             <span>Apodo:</span>
-            <p>Ronald aquí haces tu magia</p>
+            <p>Quesadilla</p>
           </div>
           <div class="member-info">
-            <span>Frase celebre:</span>
+            <span>Frase célebre:</span>
             <p>Estoy en clases</p>
           </div>
         </div>
@@ -119,15 +119,15 @@
           <img class="member-img" src="../../assets/imgs/ocar-profile.jpg" alt="Oscar foto" height="200px" width="100%">
         </div>
         <div class="member-info-container">
-          <h3>Oscar Alejandro Orellana Moran</h3>
+          <h3>Oscar Alejandro Orellana Morán</h3>
           <h4>OM100123</h4>
           <div class="member-info apodo">
             <span>Apodo:</span>
             <p>Morty/Oso gruñonsito</p>
           </div>
           <div class="member-info">
-            <span>Frase celebre:</span>
-            <p>Hay Ronald</p>
+            <span>Frase célebre:</span>
+            <p>Ay, Ronald</p>
           </div>
         </div>
       </article>
