fix: error page

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./404/error.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <title>Error</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>pagina de error</title>
-  <link rel="stylesheet" href="./404/error.css">
-
-</head>
-
-<body>
-
-  <div id="container">
-    <div class="texto">
-      <h1 class="error">404</h1>
-      <h2 class="subtitulo">Error</h2>
-      <p>Ups... Pagina web no disponible, Intentelo de nuevo</p>
+  <body>
+    <div id="container">
+      <div class="texto">
+        <h1 class="error">404</h1>
+        <p>Ups... Pagina web no disponible, Intentelo de nuevo</p>
+      </div>
+      <img
+        src="https://dev.azure.com/BookMaster24/c1a49258-c382-420c-8550-1a2bc98ebf24/_apis/git/repositories/cc4a6439-d4c8-447b-bd7a-6c1888f27b45/items?path=/src/pages/error/404/astronauta.png&versionDescriptor%5BversionOptions%5D=0&versionDescriptor%5BversionType%5D=0&versionDescriptor%5Bversion%5D=erro404/grecia&resolveLfs=true&%24format=octetStream&api-version=5.0"
+        class="astronauta"
+      />
     </div>
-    <img src="https://dev.azure.com/BookMaster24/c1a49258-c382-420c-8550-1a2bc98ebf24/_apis/git/repositories/cc4a6439-d4c8-447b-bd7a-6c1888f27b45/items?path=/src/pages/error/404/astronauta.png&versionDescriptor%5BversionOptions%5D=0&versionDescriptor%5BversionType%5D=0&versionDescriptor%5Bversion%5D=erro404/grecia&resolveLfs=true&%24format=octetStream&api-version=5.0" class="astronauta">
-
-  </div>
-
-</body>
-
+  </body>
 </html>
